k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-productos

spec:

  replicas: 1

  selector:
    matchLabels:
      app: api-productos

  template:

    metadata:
      labels:
        app: api-productos

    spec:

      containers:

      - name: api-productos

        image: carlos69lamejor.azurecr.io/api-productos:v1

        ports:
        - containerPort: 80
