k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-productos-service

spec:

  type: ClusterIP

  selector:
    app: api-productos

  ports:

  - port: 80

    targetPort: 80
