k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx

  rules:

  - http:

      paths:

      - path: /productos

        pathType: Prefix

        backend:

          service:

            name: api-productos-service

            port:

              number: 80
